tests/purs/failing/QualifierUnderscoreMiddle.purs
-- @shouldFailWith ErrorParsingModule
module Qualifier_HasUnderscore.OkModuleName where

import Effect.Console (log)

main = log "Done"
